[package]
name = "human-panic"
version = "1.0.4-alpha.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/human-panic"
homepage = "https://github.com/yoshuawuyts/human-panic"
documentation = "https://docs.rs/human-panic"
description = "Panic messages for humans"
authors = [
  "Yoshua Wuyts <yoshuawuyts@gmail.com>",
  "Pascal Hertleif <killercup@gmail.com>",
  "Katharina Fey <kookie@spacekookie.de>",
]
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
termcolor = "1.1.3"
uuid = { version = "1.1.2", features = ["v4"], default-features = false }
serde_derive = "1.0.139"
toml = "0.5.9"
serde = "1.0.139"
os_info = "3.4.0"
backtrace = "0.3.66"
native-dialog = "0.6.3"

[features]
nightly = []

[workspace]
members = ["tests/single-panic", "tests/custom-panic"]
